# freshdesk-mbox-importer

./: .env.sample  .gitignore  README.md  pyproject.toml
freshdesk_mbox_importer/: __main__.py  importer.py  settings.py
